--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
                 <div class="merch-items">
                     <div class="merch-item">
                         <img src="biswas_1.jpg" alt="Yadav T-shirt 1">
-                        <p>Choudhary T-shirt 1</p>
+                        <p>Biswas T-shirt 1</p>
                     </div>
                     <div class="merch-item">
                         <img src="biswas_2.jpg" alt="Yadav T-shirt 2">
-                        <p>Choudhary T-shirt 2</p>
+                        <p>Biswas T-shirt 2</p>
                     </div>
                     <div class="merch-item">
                         <img src="biswas_3.jpg" alt="Yadav T-shirt 3">
-                        <p>Choudhary T-shirt 3</p>
+                        <p>Biswas T-shirt 3</p>
                     </div>
                 </div>
             </div>
